src/test/ui/consts/const-eval/const-eval-query-stack.stderr
warning: any use of this value will cause an error
  --> $DIR/const-eval-query-stack.rs:20:16
   |
LL | const X: i32 = 1 / 0;
   | ---------------^^^^^-
   |                |
   |                attempt to divide `1_i32` by zero
   |
note: the lint level is defined here
  --> $DIR/const-eval-query-stack.rs:19:8
   |
LL | #[warn(const_err)]
   |        ^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/const-eval-query-stack.rs:23:28
   |
LL |     let x: &'static i32 = &X;
   |                            ^ referenced constant has errors
query stack during panic:
#0 [normalize_generic_arg_after_erasing_regions] normalizing `main::promoted[1]`
#1 [optimized_mir] optimizing MIR for `main`
#2 [collect_and_partition_mono_items] collect_and_partition_mono_items
end of query stack
